# postgresql-libpq-notify

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  libpq-notify.cabal  postgresql-libpq-notify.cabal
notes/: dev-notes-2020-06-07.md
src/Database/PostgreSQL/LibPQ/: Notify.hs
test/: Main.hs
